fix header image/links z-index

--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -25,6 +25,7 @@ header#site-header {
     }
 
     h1, h2 {
+        position: relative; // required for z-index to work
         z-index: 10;
     }
 
